--- a/harem_hotel.html
+++ b/harem_hotel.html
@@ -36,5 +36,6 @@
             </div>
         </div>
     </div>
+    <div class="facebook" style="margin: 0 auto;width: 90%;text-align: center;"><a href="https://www.facebook.com/ddsa.game.hen"><i class="fa fa-facebook-official" style="font-size:48px;color:rgb(21, 95, 255)"></i>DDSA</a></div>
 </body>
 </html>
