--- a/harem_hotel.html
+++ b/harem_hotel.html
@@ -28,7 +28,7 @@
             </div>
             <div class="dow_game">
                 <h2>v0.13.2:</h2>
-                 <p><strong>Link pc:</strong><a href="#">Drive</a></p>
+                 <p><strong>Link pc:</strong><a href="https://drive.google.com/file/d/1_sgKoh1af8b39hzSAq9XY8HG7jkqX035/view?fbclid=IwAR2koILEe7K4_OsyFMsCk1nNwPgnUOTW5_oPmbN1k4_YibTJxNU3Ne-jjlI">Drive</a></p>
                  <p><strong>Link androi:</strong><a href="#">Vài hôm nữa mình sẽ úp</a></p>
                  <br>
                  <br>
