--- a/harem_hotel_v.html
+++ b/harem_hotel_v.html
@@ -7,6 +7,6 @@
     <title>harem hotel</title>
 </head>
 <body>
-    <a href="#">harem_hotel_v0.13.2[việt hoá]</a>
+    <a href="https://drive.google.com/file/d/1_sgKoh1af8b39hzSAq9XY8HG7jkqX035/view?fbclid=IwAR2koILEe7K4_OsyFMsCk1nNwPgnUOTW5_oPmbN1k4_YibTJxNU3Ne-jjlI">harem_hotel_v0.13.2_pc[Tiếng Việt]</a>
 </body>
 </html>
