--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="dow_game">
                 <h2>v0.13.2:</h2>
-                 <p><strong>Link pc:</strong><a href="#">Drive</a></p>
+                 <p><strong>Link pc:</strong><a href="https://bitly.com.vn/n9m179">Drive</a></p>
                  <p><strong>Link androi:</strong><a href="#">Vài hôm nữa mình sẽ úp</a></p>
                  <br>
                  <br>
@@ -36,5 +36,6 @@
             </div>
         </div>
     </div>
+    <div class="facebook" style="margin: 0 auto;width: 90%;text-align: center;"><a href="https://www.facebook.com/ddsa.game.hen"><i class="fa fa-facebook-official" style="font-size:48px;color:rgb(21, 95, 255)"></i>DDSA</a></div>
 </body>
 </html>
