--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                  <p><strong>Link pc:</strong><a href="https://bitly.com.vn/n9m179">Drive</a></p>
                  <p><strong>Link androi:</strong><a href="#">Vài hôm nữa mình sẽ úp</a></p>
                  <br>
+                    <p>Nếu link có vấn đề hãy nhắn về facebook của mình có ở dưới</p>
                  <br>
                  <strong><a href="harem_hotel_v">Một số phiên bản củ hơn ></a></strong>
             </div>
