--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="dow_game">
                 <h2>v0.13.2:</h2>
                  <p><strong>Link pc:</strong><a href="https://bitly.com.vn/n9m179">Drive</a></p>
-                 <p><strong>Link androi:</strong><a href="#">Vài hôm nữa mình sẽ úp</a></p>
+                 <p><strong>Link android:</strong><a href="#">Vài hôm nữa mình sẽ úp</a></p>
                  <br>
                     <p>Nếu link có vấn đề hãy nhắn về facebook của mình có ở dưới</p>
                  <br>
