--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="tab_menu">
-        <a href="" class="logo">DDSA</a>
+        <a href="../" class="logo">DDSA</a>
     </div>
     <div class="main">
         <img src="hFDaBg.png" class="bk">
@@ -31,7 +31,7 @@
                  <p><strong>Link pc:</strong><a href="https://bitly.com.vn/n9m179">Drive</a></p>
                  <p><strong>Link android:</strong><a href="#">Vài hôm nữa mình sẽ úp</a></p>
                  <br>
-                    <p>Nếu link có vấn đề hãy nhắn về facebook của mình có ở dưới</p>
+                    <p>Nếu link có vấn đề hãy nhắn về facebook của mình có ở dưới:<br/>https://www.facebook.com/ddsa.game.hen</p>
                  <br>
                  <strong><a href="harem_hotel_v">Một số phiên bản củ hơn ></a></strong>
             </div>
