--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <Strong>Phiển bản</Strong>: v0.13.2 <br>
                 <strong>Dung lượng:</strong> 8gb <br>
                 <strong>Ngôn ngữ :</strong> Tiếng việt <br>
-                <strong>Được thược hiện bởi DDSA</strong>
+                <strong>Được thực hiện bởi DDSA</strong>
                 <strong>Chơi cũng khá hay</strong>
             </div>
             <div class="dow_game">
